[package]
name = "eveon_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.22.0"
egui_dock = { git = "https://github.com/frodggy/egui_dock_glfw.git", version = "0.6.3" }
egui_glfw_gl = { git = "https://github.com/shivang51/egui_glfw_gl.git", version = "0.13.1" }
eveon_engine = { version = "0.1.0", path = "../eveon_engine" }
image = "0.24.6"
