[package]
name = "testc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
egui_glfw_gl = { git = "https://github.com/shivang51/egui_glfw_gl.git", version = "0.13.1" }
eveon_engine = { version = "0.1.0", path = "../eveon_engine" }
gl = "0.14.0"
glfw = "0.51.0"

